# cChardet

./: .gitmodules  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: build.yaml  release.yaml  test.yml
src/cchardet/: __init__.py
tools/: bump_version.py
