[project]
name = "cchardet"
authors = [{ name = "PyYoshi", email = "myoshi321go@gmail.com" }]
urls.Homepage = 'https://github.com/PyYoshi/cChardet'
description = 'cChardet is high speed universal character encoding detector.'
readme = { file = 'README.md', content-type = 'text/markdown' }
license = { file = "COPYING" }
classifiers = [
    'License :: OSI Approved :: Mozilla Public License 1.1 (MPL 1.1)',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)',
    'Programming Language :: Cython',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
requires-python = ">= 3.13"
dynamic = ["version"]

[build-system]
requires = ["setuptools", "Cython>=3.2.6", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
cchardetect = "cchardet.cli.cchardetect:main"

[tool.setuptools.dynamic]
version = { attr = "cchardet.__version__" }

[tool.rye]
dev-dependencies = [
    "chardet>=5.2.0",
    "cython>=3.2.6",
    "setuptools>=70.0.0",
    "pytest>=8.2.1",
    "ruff>=0.4.6",
]

[tool.ruff]
exclude = ["src/ext"]
line-length = 100
target-version = "py313"
lint.select = ["E", "F", "I", "N"]
format.quote-style = "double"
format.indent-style = "space"

[tool.cibuildwheel]
skip = "pp* cp36-* cp37-* cp38-* cp39-* cp310-* cp311-* cp312-*"
archs = "auto"
before-build = [
    "pip install cython==3.2.6",
    "cython {project}/src/cchardet/_cchardet.pyx",
]

# NOTICE: Tests pass locally but some detection cases fail inside cibuildwheel, so tests are temporarily disabled
# test-requires = "pytest"
# test-command = "pytest -vs {project}/tests"
